corrections and spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,20 +10,15 @@
  */
 
 /* style that over rides everything */
-
-
-
-body {
-    margin: 0;
-    padding: 0;
-    background-color: #05050E;
+* {
 
 }
 
 
+body {
 
-
-
+    background-color: #05050E;
+}
 
 header {
     background-image: url("img/crack-in-time.jpg");
@@ -34,14 +29,7 @@ header {
     margin-left: auto;
     margin-right: auto;
     position: fixed;
-
 }
-
-
-
-
-
-
 
 .logo {
     padding: 0;
@@ -59,6 +47,7 @@ nav {
     align-self: center;
     font-family: 'Julius Sans One', sans-serif;
     background-color: rgba(12, 23, 41, 0);
+
 }
 
 .nav-list {
@@ -66,53 +55,38 @@ nav {
     list-style-type: none;
 }
 
-
-
-
 .nav-items {
     display: inline-block;
     padding: 20px;
     color: antiquewhite;
     text-decoration: none;
     transition: all 0.4s ease;
-
 }
 
 .nav-list a:hover {
     background-color: rgba(87, 47, 94, .4);
-
 }
 
 .theory-list, .doctor-list{
     display: none;
     list-style-type: none;
     padding: 1em;
-
-
 }
 
 .doctor-items, .theory-items {
     text-decoration: none;
-
 }
-
-
 
 nav ul li:hover > ul {
     display: block;
     background-color: rgba(87, 47, 94, .4);
-
 }
 
 
+/*  771x643 where it start to look weird
+    iphone 375x812
 
-.container{
-    color: antiquewhite;
-    background-color: #05050E;
-    margin: 0;
-    padding: 0;
-}
-
+ */
 
 
 
